Gave the dropdown menu an insane z-index as well for http://bugzilla.pculture.org/show_bug.cgi?id=14072

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -1604,6 +1604,7 @@ li.mirosubs-transcribeHelp ol li {
     -webkit-border-bottom-left-radius: 5px !important; 
     -webkit-border-bottom-rught-radius: 5px !important; 
     position: absolute !important;
+   z-index: 2147483639;
 }
 
 .mirosubs-langmenuitem {
